src/com/google/imageplayground/parser/ScriptGrammarParser.java
// $ANTLR 3.4 ScriptGrammar.g 2012-03-31 12:38:30

package com.google.imageplayground.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class ScriptGrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BLOCK", "CALL", "ID", "INT", "NEG", "NEWLINE", "TYPE", "WS", "'!='", "'%'", "'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "'<'", "'<<'", "'<<<'", "'<='", "'='", "'=='", "'>'", "'>='", "'>>'", "'for'", "'if'", "'return'", "'while'", "'{'", "'|'", "'}'", "'~'"
    };

    public static final int EOF=-1;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int BLOCK=4;
    public static final int CALL=5;
    public static final int ID=6;
    public static final int INT=7;
    public static final int NEG=8;
    public static final int NEWLINE=9;
    public static final int TYPE=10;
    public static final int WS=11;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public ScriptGrammarParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ScriptGrammarParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return ScriptGrammarParser.tokenNames; }
    public String getGrammarFileName() { return "ScriptGrammar.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // ScriptGrammar.g:24:1: prog : ( block )+ ;
    public final ScriptGrammarParser.prog_return prog() throws RecognitionException {
        ScriptGrammarParser.prog_return retval = new ScriptGrammarParser.prog_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        ScriptGrammarParser.block_return block1 =null;



        try {
            // ScriptGrammar.g:24:5: ( ( block )+ )
            // ScriptGrammar.g:24:9: ( block )+
            {
            root_0 = (CommonTree)adaptor.nil();


            // ScriptGrammar.g:24:9: ( block )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= ID && LA1_0 <= INT)||(LA1_0 >= NEWLINE && LA1_0 <= TYPE)||LA1_0==15||LA1_0==20||(LA1_0 >= 31 && LA1_0 <= 35)||LA1_0==38) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ScriptGrammar.g:24:10: block
            	    {
            	    pushFollow(FOLLOW_block_in_prog91);
            	    block1=block();

            	    state._fsp--;

            	    adaptor.addChild(root_0, block1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block"
    // ScriptGrammar.g:26:1: block : ( '{' NEWLINE ( block )* '}' -> ^( BLOCK ( block )* ) | stat );
    public final ScriptGrammarParser.block_return block() throws RecognitionException {
        ScriptGrammarParser.block_return retval = new ScriptGrammarParser.block_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal2=null;
        Token NEWLINE3=null;
        Token char_literal5=null;
        ScriptGrammarParser.block_return block4 =null;

        ScriptGrammarParser.stat_return stat6 =null;


        CommonTree char_literal2_tree=null;
        CommonTree NEWLINE3_tree=null;
        CommonTree char_literal5_tree=null;
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
        RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // ScriptGrammar.g:26:6: ( '{' NEWLINE ( block )* '}' -> ^( BLOCK ( block )* ) | stat )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==35) ) {
                alt3=1;
            }
            else if ( ((LA3_0 >= ID && LA3_0 <= INT)||(LA3_0 >= NEWLINE && LA3_0 <= TYPE)||LA3_0==15||LA3_0==20||(LA3_0 >= 31 && LA3_0 <= 34)||LA3_0==38) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // ScriptGrammar.g:26:8: '{' NEWLINE ( block )* '}'
                    {
                    char_literal2=(Token)match(input,35,FOLLOW_35_in_block101);  
                    stream_35.add(char_literal2);


                    NEWLINE3=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_block103);  
                    stream_NEWLINE.add(NEWLINE3);


                    // ScriptGrammar.g:26:20: ( block )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( ((LA2_0 >= ID && LA2_0 <= INT)||(LA2_0 >= NEWLINE && LA2_0 <= TYPE)||LA2_0==15||LA2_0==20||(LA2_0 >= 31 && LA2_0 <= 35)||LA2_0==38) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // ScriptGrammar.g:26:20: block
                    	    {
                    	    pushFollow(FOLLOW_block_in_block105);
                    	    block4=block();

                    	    state._fsp--;

                    	    stream_block.add(block4.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    char_literal5=(Token)match(input,37,FOLLOW_37_in_block108);  
                    stream_37.add(char_literal5);


                    // AST REWRITE
                    // elements: block
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 26:31: -> ^( BLOCK ( block )* )
                    {
                        // ScriptGrammar.g:26:34: ^( BLOCK ( block )* )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        (CommonTree)adaptor.create(BLOCK, "BLOCK")
                        , root_1);

                        // ScriptGrammar.g:26:42: ( block )*
                        while ( stream_block.hasNext() ) {
                            adaptor.addChild(root_1, stream_block.nextTree());

                        }
                        stream_block.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // ScriptGrammar.g:27:8: stat
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_stat_in_block126);
                    stat6=stat();

                    state._fsp--;

                    adaptor.addChild(root_0, stat6.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "block"


    public static class stat_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "stat"
    // ScriptGrammar.g:30:1: stat : ( expr NEWLINE -> expr | TYPE assign -> ^( TYPE assign ) | assign | retexp | ifexp | whileexp | forexp | NEWLINE ->);
    public final ScriptGrammarParser.stat_return stat() throws RecognitionException {
        ScriptGrammarParser.stat_return retval = new ScriptGrammarParser.stat_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token NEWLINE8=null;
        Token TYPE9=null;
        Token NEWLINE16=null;
        ScriptGrammarParser.expr_return expr7 =null;

        ScriptGrammarParser.assign_return assign10 =null;

        ScriptGrammarParser.assign_return assign11 =null;

        ScriptGrammarParser.retexp_return retexp12 =null;

        ScriptGrammarParser.ifexp_return ifexp13 =null;

        ScriptGrammarParser.whileexp_return whileexp14 =null;

        ScriptGrammarParser.forexp_return forexp15 =null;


        CommonTree NEWLINE8_tree=null;
        CommonTree TYPE9_tree=null;
        CommonTree NEWLINE16_tree=null;
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
        RewriteRuleTokenStream stream_TYPE=new RewriteRuleTokenStream(adaptor,"token TYPE");
        RewriteRuleSubtreeStream stream_assign=new RewriteRuleSubtreeStream(adaptor,"rule assign");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            // ScriptGrammar.g:30:5: ( expr NEWLINE -> expr | TYPE assign -> ^( TYPE assign ) | assign | retexp | ifexp | whileexp | forexp | NEWLINE ->)
            int alt4=8;
            switch ( input.LA(1) ) {
            case INT:
            case 15:
            case 20:
            case 38:
                {
                alt4=1;
                }
                break;
            case ID:
                {
                int LA4_2 = input.LA(2);

                if ( (LA4_2==NEWLINE||(LA4_2 >= 13 && LA4_2 <= 15)||(LA4_2 >= 17 && LA4_2 <= 18)||(LA4_2 >= 20 && LA4_2 <= 21)||(LA4_2 >= 23 && LA4_2 <= 24)||LA4_2==30||LA4_2==36) ) {
                    alt4=1;
                }
                else if ( (LA4_2==26) ) {
                    alt4=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 2, input);

                    throw nvae;

                }
                }
                break;
            case TYPE:
                {
                alt4=2;
                }
                break;
            case 33:
                {
                alt4=4;
                }
                break;
            case 32:
                {
                alt4=5;
                }
                break;
            case 34:
                {
                alt4=6;
                }
                break;
            case 31:
                {
                alt4=7;
                }
                break;
            case NEWLINE:
                {
                alt4=8;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }

            switch (alt4) {
                case 1 :
                    // ScriptGrammar.g:30:9: expr NEWLINE
                    {
                    pushFollow(FOLLOW_expr_in_stat140);
                    expr7=expr();

                    state._fsp--;

                    stream_expr.add(expr7.getTree());

                    NEWLINE8=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_stat142);  
                    stream_NEWLINE.add(NEWLINE8);


                    // AST REWRITE
                    // elements: expr
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 30:29: -> expr
                    {
                        adaptor.addChild(root_0, stream_expr.nextTree());

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // ScriptGrammar.g:31:9: TYPE assign
                    {
                    TYPE9=(Token)match(input,TYPE,FOLLOW_TYPE_in_stat163);  
                    stream_TYPE.add(TYPE9);


                    pushFollow(FOLLOW_assign_in_stat165);
                    assign10=assign();

                    state._fsp--;

                    stream_assign.add(assign10.getTree());

                    // AST REWRITE
                    // elements: TYPE, assign
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 31:21: -> ^( TYPE assign )
                    {
                        // ScriptGrammar.g:31:24: ^( TYPE assign )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        stream_TYPE.nextNode()
                        , root_1);

                        adaptor.addChild(root_1, stream_assign.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 3 :
                    // ScriptGrammar.g:32:9: assign
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_assign_in_stat183);
                    assign11=assign();

                    state._fsp--;

                    adaptor.addChild(root_0, assign11.getTree());

                    }
                    break;
                case 4 :
                    // ScriptGrammar.g:33:9: retexp
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_retexp_in_stat193);
                    retexp12=retexp();

                    state._fsp--;

                    adaptor.addChild(root_0, retexp12.getTree());

                    }
                    break;
                case 5 :
                    // ScriptGrammar.g:34:9: ifexp
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_ifexp_in_stat203);
                    ifexp13=ifexp();

                    state._fsp--;

                    adaptor.addChild(root_0, ifexp13.getTree());

                    }
                    break;
                case 6 :
                    // ScriptGrammar.g:35:9: whileexp
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_whileexp_in_stat213);
                    whileexp14=whileexp();

                    state._fsp--;

                    adaptor.addChild(root_0, whileexp14.getTree());

                    }
                    break;
                case 7 :
                    // ScriptGrammar.g:36:9: forexp
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_forexp_in_stat223);
                    forexp15=forexp();

                    state._fsp--;

                    adaptor.addChild(root_0, forexp15.getTree());

                    }
                    break;
                case 8 :
                    // ScriptGrammar.g:37:9: NEWLINE
                    {
                    NEWLINE16=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_stat233);  
                    stream_NEWLINE.add(NEWLINE16);


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 37:29: ->
                    {
                        root_0 = null;
                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "stat"


    public static class assign_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "assign"
    // ScriptGrammar.g:40:1: assign : ID '=' expr NEWLINE -> ^( '=' ID expr ) ;
    public final ScriptGrammarParser.assign_return assign() throws RecognitionException {
        ScriptGrammarParser.assign_return retval = new ScriptGrammarParser.assign_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token ID17=null;
        Token char_literal18=null;
        Token NEWLINE20=null;
        ScriptGrammarParser.expr_return expr19 =null;


        CommonTree ID17_tree=null;
        CommonTree char_literal18_tree=null;
        CommonTree NEWLINE20_tree=null;
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            // ScriptGrammar.g:40:7: ( ID '=' expr NEWLINE -> ^( '=' ID expr ) )
            // ScriptGrammar.g:40:9: ID '=' expr NEWLINE
            {
            ID17=(Token)match(input,ID,FOLLOW_ID_in_assign263);  
            stream_ID.add(ID17);


            char_literal18=(Token)match(input,26,FOLLOW_26_in_assign265);  
            stream_26.add(char_literal18);


            pushFollow(FOLLOW_expr_in_assign267);
            expr19=expr();

            state._fsp--;

            stream_expr.add(expr19.getTree());

            NEWLINE20=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_assign269);  
            stream_NEWLINE.add(NEWLINE20);


            // AST REWRITE
            // elements: expr, 26, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 40:29: -> ^( '=' ID expr )
            {
                // ScriptGrammar.g:40:32: ^( '=' ID expr )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_26.nextNode()
                , root_1);

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                adaptor.addChild(root_1, stream_expr.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "assign"


    public static class retexp_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "retexp"
    // ScriptGrammar.g:43:1: retexp : 'return' expr NEWLINE -> ^( 'return' expr ) ;
    public final ScriptGrammarParser.retexp_return retexp() throws RecognitionException {
        ScriptGrammarParser.retexp_return retval = new ScriptGrammarParser.retexp_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal21=null;
        Token NEWLINE23=null;
        ScriptGrammarParser.expr_return expr22 =null;


        CommonTree string_literal21_tree=null;
        CommonTree NEWLINE23_tree=null;
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            // ScriptGrammar.g:43:7: ( 'return' expr NEWLINE -> ^( 'return' expr ) )
            // ScriptGrammar.g:43:9: 'return' expr NEWLINE
            {
            string_literal21=(Token)match(input,33,FOLLOW_33_in_retexp295);  
            stream_33.add(string_literal21);


            pushFollow(FOLLOW_expr_in_retexp297);
            expr22=expr();

            state._fsp--;

            stream_expr.add(expr22.getTree());

            NEWLINE23=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_retexp299);  
            stream_NEWLINE.add(NEWLINE23);


            // AST REWRITE
            // elements: 33, expr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 43:31: -> ^( 'return' expr )
            {
                // ScriptGrammar.g:43:34: ^( 'return' expr )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_33.nextNode()
                , root_1);

                adaptor.addChild(root_1, stream_expr.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "retexp"


    public static class expr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expr"
    // ScriptGrammar.g:46:1: expr : multExpr ( ( '+' ^| '-' ^| '&' ^| '|' ^| '>>' ^| '<<' ^| '<<<' ^) multExpr )* ;
    public final ScriptGrammarParser.expr_return expr() throws RecognitionException {
        ScriptGrammarParser.expr_return retval = new ScriptGrammarParser.expr_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal25=null;
        Token char_literal26=null;
        Token char_literal27=null;
        Token char_literal28=null;
        Token string_literal29=null;
        Token string_literal30=null;
        Token string_literal31=null;
        ScriptGrammarParser.multExpr_return multExpr24 =null;

        ScriptGrammarParser.multExpr_return multExpr32 =null;


        CommonTree char_literal25_tree=null;
        CommonTree char_literal26_tree=null;
        CommonTree char_literal27_tree=null;
        CommonTree char_literal28_tree=null;
        CommonTree string_literal29_tree=null;
        CommonTree string_literal30_tree=null;
        CommonTree string_literal31_tree=null;

        try {
            // ScriptGrammar.g:46:5: ( multExpr ( ( '+' ^| '-' ^| '&' ^| '|' ^| '>>' ^| '<<' ^| '<<<' ^) multExpr )* )
            // ScriptGrammar.g:46:9: multExpr ( ( '+' ^| '-' ^| '&' ^| '|' ^| '>>' ^| '<<' ^| '<<<' ^) multExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_multExpr_in_expr325);
            multExpr24=multExpr();

            state._fsp--;

            adaptor.addChild(root_0, multExpr24.getTree());

            // ScriptGrammar.g:46:18: ( ( '+' ^| '-' ^| '&' ^| '|' ^| '>>' ^| '<<' ^| '<<<' ^) multExpr )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==14||LA6_0==18||LA6_0==20||(LA6_0 >= 23 && LA6_0 <= 24)||LA6_0==30||LA6_0==36) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // ScriptGrammar.g:46:19: ( '+' ^| '-' ^| '&' ^| '|' ^| '>>' ^| '<<' ^| '<<<' ^) multExpr
            	    {
            	    // ScriptGrammar.g:46:19: ( '+' ^| '-' ^| '&' ^| '|' ^| '>>' ^| '<<' ^| '<<<' ^)
            	    int alt5=7;
            	    switch ( input.LA(1) ) {
            	    case 18:
            	        {
            	        alt5=1;
            	        }
            	        break;
            	    case 20:
            	        {
            	        alt5=2;
            	        }
            	        break;
            	    case 14:
            	        {
            	        alt5=3;
            	        }
            	        break;
            	    case 36:
            	        {
            	        alt5=4;
            	        }
            	        break;
            	    case 30:
            	        {
            	        alt5=5;
            	        }
            	        break;
            	    case 23:
            	        {
            	        alt5=6;
            	        }
            	        break;
            	    case 24:
            	        {
            	        alt5=7;
            	        }
            	        break;
            	    default:
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 5, 0, input);

            	        throw nvae;

            	    }

            	    switch (alt5) {
            	        case 1 :
            	            // ScriptGrammar.g:46:20: '+' ^
            	            {
            	            char_literal25=(Token)match(input,18,FOLLOW_18_in_expr329); 
            	            char_literal25_tree = 
            	            (CommonTree)adaptor.create(char_literal25)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(char_literal25_tree, root_0);


            	            }
            	            break;
            	        case 2 :
            	            // ScriptGrammar.g:46:25: '-' ^
            	            {
            	            char_literal26=(Token)match(input,20,FOLLOW_20_in_expr332); 
            	            char_literal26_tree = 
            	            (CommonTree)adaptor.create(char_literal26)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(char_literal26_tree, root_0);


            	            }
            	            break;
            	        case 3 :
            	            // ScriptGrammar.g:46:30: '&' ^
            	            {
            	            char_literal27=(Token)match(input,14,FOLLOW_14_in_expr335); 
            	            char_literal27_tree = 
            	            (CommonTree)adaptor.create(char_literal27)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(char_literal27_tree, root_0);


            	            }
            	            break;
            	        case 4 :
            	            // ScriptGrammar.g:46:35: '|' ^
            	            {
            	            char_literal28=(Token)match(input,36,FOLLOW_36_in_expr338); 
            	            char_literal28_tree = 
            	            (CommonTree)adaptor.create(char_literal28)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(char_literal28_tree, root_0);


            	            }
            	            break;
            	        case 5 :
            	            // ScriptGrammar.g:46:40: '>>' ^
            	            {
            	            string_literal29=(Token)match(input,30,FOLLOW_30_in_expr341); 
            	            string_literal29_tree = 
            	            (CommonTree)adaptor.create(string_literal29)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(string_literal29_tree, root_0);


            	            }
            	            break;
            	        case 6 :
            	            // ScriptGrammar.g:46:46: '<<' ^
            	            {
            	            string_literal30=(Token)match(input,23,FOLLOW_23_in_expr344); 
            	            string_literal30_tree = 
            	            (CommonTree)adaptor.create(string_literal30)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(string_literal30_tree, root_0);


            	            }
            	            break;
            	        case 7 :
            	            // ScriptGrammar.g:46:52: '<<<' ^
            	            {
            	            string_literal31=(Token)match(input,24,FOLLOW_24_in_expr347); 
            	            string_literal31_tree = 
            	            (CommonTree)adaptor.create(string_literal31)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(string_literal31_tree, root_0);


            	            }
            	            break;

            	    }


            	    pushFollow(FOLLOW_multExpr_in_expr351);
            	    multExpr32=multExpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, multExpr32.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "expr"


    public static class multExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "multExpr"
    // ScriptGrammar.g:49:1: multExpr : unaryExp ( ( '*' ^| '/' ^| '%' ^) unaryExp )* ;
    public final ScriptGrammarParser.multExpr_return multExpr() throws RecognitionException {
        ScriptGrammarParser.multExpr_return retval = new ScriptGrammarParser.multExpr_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;
